[package]
name = "cargo-ver"
description = "A cargo extension to manage crate versions."
version = "0.2.3"
edition = "2018"
authors = [ "Taylan Gökkaya <insomnimus.dev@gmail.com>" ]
license = "MIT"
categories = [ "command-line-utilities", "development-tools", "development-tools::cargo-plugins" ]
keywords = [
  "cli", "cargo", "cargo-plugins", "semver",
]
readme = "readme.md"
repository = "https://github.com/insomnimus/cargo-ver"

[dependencies]
clap = "3.0.0-beta.4"
toml_edit = "0.2.1"
